...

      setSearchResult(updatedSearchResult)
    }
  }, [searchResult, user.checked])

  return (
    <View testID="userCard" style={style.box}>
      <CheckBox
        value={user.checked}
        onValueChange={onCheck}
        icon={<Icon name="checkmark" size={18} color="#fff" />}
        style={[style.checkbox, !isEditable && { display: 'none' }]}
        disabled={!isEditable}
        testID="userCardCheckbox"
      />
      <View style={style.content}>

        <View style={style.infos}>
          <Image style={style.avatar} source={{ uri: user.avatar_url }} />
          <Text style={[style.text, { color: theme.colors.secondaryText }]}>#{user.id}</Text>
...
