...
    <MainScreenContext.Provider value={contextValue}>
      <View style={style.container}>
        <MainHeader />
        <View style={style.main}>
          <TextInput
            ref={inputRef}
            testID="searchInput"
            style={{
              marginBottom: theme.spacing.l
            }}
            onChangeText={(text) => {
              setSearchText(text)
              fetchUserQuery(text)
...
          <View style={{
            flexDirection: 'row',
            // justifyContent: 'center',
            marginBottom: theme.spacing.l
          }}>
            <Button
              testID="toggleEditMode"
              color={!isEditable ? 'primary' : 'danger'}
              icon={<Icon name="create-outline" size={24} color="#fff" />}
              onPress={() => setEditable(value => !value)}
            >
              {!isEditable ? 'Enable edit mode' : 'Disable edit mode'}
            </Button>
...
